# Generate_Challenges

./: README.md
backend/: .env  .gitignore  pyproject.toml  server.py
backend/src/: app.py  utils.py
backend/src/database/: db.py  models.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/auth/: ClerkProviderWithRoutes.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
